fixes #9803: label and input alignment in horizontal forms

--- a/less/forms.less
+++ b/less/forms.less
@@ -329,7 +329,7 @@ input[type="checkbox"],
 .form-horizontal .control-label,
 .form-horizontal .radio-inline,
 .form-horizontal .checkbox-inline {
-  padding-top: @padding-base-vertical;
+  padding-top: (@padding-base-vertical + 1); // Default padding plus a border
 }
 
 .form-horizontal {
